# dotheaven

./: .gitignore  AA_MIGRATION_PLAN.md  AGENTS.md  CLAUDE.md  POSTS_PLAN.md  README.md  agora_cache.db  crash_context_v1  package.json  plan.md
app/: .gitignore  index.html  package.json
app/.storybook/: preview.tsx
app/src-tauri/: Cargo.toml
app/src-tauri/src/: main.rs
apps/: README.md
apps/frontend/src-tauri/: Cargo.toml  tauri.conf.json
apps/frontend/src-tauri/binaries/: xmtp-sidecar-x86_64-unknown-linux-gnu
apps/frontend/src-tauri/capabilities/: default.json
apps/frontend/src-tauri/icons/: icon.icns
apps/frontend/src-tauri/src/: audio.rs  auth.rs  jacktrip.rs  lib.rs  music_db.rs  xmtp.rs
apps/gpui-poc/: AGENTS.md  Cargo.toml  README.md  agora_cache.db  build.rs  run.sh
apps/gpui-poc/docs/plans/: gpui-playlist-and-sharing-v1.md
apps/gpui-poc/native/agora_bridge/include/: heaven_agora_bridge.h
apps/gpui-poc/native/agora_bridge/src/: heaven_agora_bridge.cpp
apps/gpui-poc/scripts/: build-clean.sh  bundle-macos.sh  generate-macos-icns.sh  install-desktop-entry-linux.sh  run-agora-linux.sh  setup-duet-audio-source-linux.sh
apps/gpui-poc/sidecar/: package.json  synapse-sidecar.ts
apps/gpui-poc/src/: app_bootstrap.rs  app_shell.rs  audio.rs  auth.rs  chat.rs  feed.rs  heaven_http_client.rs  icons.rs  library.rs  lit_action_registry.rs  lit_wallet.rs  load_storage.rs  lyrics.rs  main.rs  music_db.rs  profile.rs  rooms.rs  schedule.rs  scrobble.rs  scrobble_refresh.rs  settings.rs  status_center.rs  synapse_sidecar.rs  theme.rs  wallet.rs  xmtp_service.rs
apps/gpui-poc/src/audio/: engine.rs
apps/gpui-poc/src/chat/: AGENTS.md  compose.rs  conversations.rs  helpers.rs  model.rs  streams.rs  theme.rs  view.rs  voice.rs
apps/gpui-poc/src/chat/handoff/: mod.rs  openers.rs
apps/gpui-poc/src/chat/helpers/: time_text.rs
apps/gpui-poc/src/chat/streams/: connect.rs
apps/gpui-poc/src/chat/view/: compose.rs  input.rs  messages.rs  panel.rs
apps/gpui-poc/src/chat/view/panel/: empty_state.rs
apps/gpui-poc/src/chat/view/panel/active_chat/: mod.rs
apps/gpui-poc/src/chat/view/panel/active_chat/header/: scarlett_controls.rs
apps/gpui-poc/src/feed/: components.rs
apps/gpui-poc/src/lit_action_registry/: tests.rs
apps/gpui-poc/src/lit_wallet/: impl_crypto_and_authctx.rs  impl_signing_and_tx.rs
apps/gpui-poc/src/lit_wallet/impl_init_and_execute/: auth_init.rs
apps/gpui-poc/src/load_storage/: AGENTS.md  config.rs  content.rs  decrypt.rs  helpers.rs
apps/gpui-poc/src/load_storage/content/: grant_access.rs  register_encrypt.rs  resolve.rs  upload_register.rs
apps/gpui-poc/src/load_storage/helpers/: env.rs  shared_audio.rs  upload.rs
apps/gpui-poc/src/load_storage/helpers/chain/: access.rs  metadata.rs
apps/gpui-poc/src/load_storage/playlist/: execute.rs  fetch.rs  mod.rs  mutations.rs
apps/gpui-poc/src/music_db/: query_ops.rs
apps/gpui-poc/src/pages/: mod.rs
apps/gpui-poc/src/profile/: model.rs  render.rs
apps/gpui-poc/src/profile/render/: playlists.rs  scrobbles.rs
apps/gpui-poc/src/rooms/: AGENTS.md  model.rs  seed_data.rs  status_events.rs
apps/gpui-poc/src/rooms/actions/: bridge.rs  create_flow.rs
apps/gpui-poc/src/rooms/actions/host_room/: lifecycle.rs  polling.rs  segments.rs
apps/gpui-poc/src/rooms/actions/host_room/openers/: audio_source.rs  diagnostics.rs  links.rs
apps/gpui-poc/src/rooms/view/: host.rs  host_actions.rs  modal.rs  modal_duet_setup.rs  segment_modal.rs
apps/gpui-poc/src/rooms/view/main_panel/: room_card.rs
apps/gpui-poc/src/rooms/view/modal_duet_setup/sections/: visibility_and_actions.rs
apps/gpui-poc/src/schedule/: model.rs
apps/gpui-poc/src/schedule/view/: state.rs
apps/gpui-poc/src/schedule/view/render/: detail.rs  header.rs  helpers.rs  rows.rs  upcoming.rs
apps/gpui-poc/src/scrobble/aa/: codec.rs  rpc.rs  submit.rs
apps/gpui-poc/src/settings/: helpers.rs  impl_actions.rs  render.rs
apps/gpui-poc/src/settings/impl_actions/: auth_lit.rs  jacktrip.rs  storage.rs
apps/gpui-poc/src/shared/: address.rs  config.rs  mod.rs  rpc.rs
apps/gpui-poc/src/shell/: app_sidebar.rs  mini_player.rs  mod.rs
apps/gpui-poc/src/shell/app_sidebar/: auth_button.rs  menu_sections.rs  mod.rs
apps/gpui-poc/src/side_player/render/: controls.rs  lyrics.rs  mod.rs  timeline.rs
apps/gpui-poc/src/ui/: mod.rs  overflow_menu.rs
apps/gpui-poc/src/voice/: agora_engine.rs  api.rs  auth.rs  controller.rs  duet_bridge.rs  jacktrip.rs  mod.rs  session.rs
apps/gpui-poc/src/voice/api/: agent_chat.rs  models.rs  util.rs
apps/gpui-poc/src/voice/duet_bridge/: audio_source.rs  cli_runner.rs  launch.rs
apps/gpui-poc/src/voice/jacktrip/: path_helpers.rs
apps/gpui-poc/src/wallet/: render.rs  status_events.rs  ui.rs
apps/gpui-poc/src/xmtp_service/: AGENTS.md  helpers.rs  model.rs
apps/gpui-poc/src/xmtp_service/connection/: client_builder.rs  installation_recovery.rs  local_reset.rs
apps/gpui-poc/src/xmtp_service/dm/: conversations.rs  messaging.rs  mod.rs
apps/load-poc/lit-load-roundtrip-rs/: Cargo.toml  README.md
apps/load-poc/lit-load-roundtrip-rs/src/: lib.rs
apps/load-poc/lit-load-roundtrip-rs/tests/: lit_load_roundtrip.rs  lit_load_two_wallet_isolated.rs
apps/load-poc/rust-upload-cli/: .gitignore  Cargo.toml  README.md
apps/load-poc/rust-upload-cli/src/: main.rs
apps/react-native/modules/heaven-lit-rust/rust-core/: Cargo.toml
apps/react-native/modules/heaven-lit-rust/rust-core/src/: lib.rs
apps/rn-rust-lit-poc/modules/heaven-lit-rust/rust-core/: Cargo.toml
apps/rn-rust-lit-poc/modules/heaven-lit-rust/rust-core/src/: lib.rs
contracts/: README.md
docs/: ARCHITECTURE.md  lyrics-covers-arweave.md  new-architecture.md  onboarding-plan.md
lit-actions/: .env.example  CLAUDE.md  README.md  package.json
plans/: gpui-x402-video-upgrade-workplan.md
scripts/: switch-lit-env.ts
services/: README.md  TESTING.md  smoke-dev.ts
services/x402-facilitator-rs/: .gitignore  CLAUDE.md  Caddyfile  Cargo.toml  Dockerfile  start.sh
services/x402-facilitator-rs/src/: main.rs
subgraphs/: README.md
(+1852 files in other folders)
