[package]
name = "heaven-gpui-poc"
version = "0.1.0"
edition = "2021"

[dependencies]
gpui = "0.2"
gpui-component = "0.5"
gpui-component-assets = "0.5"
rust-embed = "8"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
open = "5"
smol = "2"
urlencoding = "2"
dirs = "6"
log = "0.4"
env_logger = "0.11"
futures-lite = "2"
ureq = { version = "3", features = ["json"] }
rusqlite = { version = "0.32", features = ["bundled"] }
lofty = "0.22"
walkdir = "2"
rfd = "0.15"
chrono = "0.4"
tokio = { version = "1.40", features = ["rt-multi-thread"] }
lit-rust-sdk = { path = "../../../lit-rust-sdk/lit-rust-sdk" }

# Audio playback (ported from Tauri audio.rs)
symphonia = { version = "0.5", features = ["mp3", "aac", "isomp4", "flac", "ogg", "vorbis", "pcm", "wav"] }
cpal = "0.15"
ringbuf = "0.3"
rubato = "0.14"
