[package]
name = "heaven-gpui-poc"
version = "0.1.0"
edition = "2021"

[features]
default = []
agora-native = []

[dependencies]
gpui = "0.2"
gpui-component = "0.5"
gpui-component-assets = "0.5"
rust-embed = "8"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
open = "5"
smol = "2"
urlencoding = "2"
dirs = "6"
log = "0.4"
env_logger = "0.11"
futures-lite = "2"
ureq = { version = "3", features = ["json"] }
rusqlite = { version = "0.37", features = ["bundled"] }
lofty = "0.22"
walkdir = "2"
rfd = "0.15"
chrono = "0.4"
tokio = { version = "1.40", features = ["rt-multi-thread"] }
lit-rust-sdk = { path = "../../../lit-rust-sdk/lit-rust-sdk" }
alloy-primitives = "1"
alloy-sol-types = "1"
hex = { package = "const-hex", version = "1.14" }
dotenvy = "0.15"
prost = { version = "0.14", default-features = false }
futures = "0.3"
base64 = "0.22"

# Audio playback (ported from Tauri audio.rs)
symphonia = { version = "0.5", features = ["mp3", "aac", "isomp4", "flac", "ogg", "vorbis", "pcm", "wav"] }
cpal = "0.15"
ringbuf = "0.3"
rubato = "0.14"

# XMTP (libxmtp) — pinned to local clone
xmtp_mls = { path = "/media/t42/th42/Code/libxmtp/crates/xmtp_mls" }
xmtp_db = { path = "/media/t42/th42/Code/libxmtp/crates/xmtp_db" }
xmtp_id = { path = "/media/t42/th42/Code/libxmtp/crates/xmtp_id" }
xmtp_api = { path = "/media/t42/th42/Code/libxmtp/crates/xmtp_api" }
xmtp_api_d14n = { path = "/media/t42/th42/Code/libxmtp/crates/xmtp_api_d14n" }
xmtp_api_grpc = { path = "/media/t42/th42/Code/libxmtp/crates/xmtp_api_grpc" }
xmtp_common = { path = "/media/t42/th42/Code/libxmtp/crates/xmtp_common" }
xmtp_content_types = { path = "/media/t42/th42/Code/libxmtp/crates/xmtp_content_types" }
xmtp_proto = { path = "/media/t42/th42/Code/libxmtp/crates/xmtp_proto" }

[patch.crates-io]
diesel = { git = "https://github.com/ephemerahq/diesel", branch = "coda/copy-to-sqlite" }
diesel_migrations = { git = "https://github.com/ephemerahq/diesel", branch = "coda/copy-to-sqlite" }

# Pin openmls deps to the same revisions libxmtp uses
openmls = { git = "https://github.com/xmtp/openmls", rev = "beb0884db264075aef271b96efbd7e9d102ee374" }
openmls_basic_credential = { git = "https://github.com/xmtp/openmls", rev = "beb0884db264075aef271b96efbd7e9d102ee374" }
openmls_libcrux_crypto = { git = "https://github.com/xmtp/openmls", rev = "beb0884db264075aef271b96efbd7e9d102ee374" }
openmls_rust_crypto = { git = "https://github.com/xmtp/openmls", rev = "beb0884db264075aef271b96efbd7e9d102ee374" }
openmls_traits = { git = "https://github.com/xmtp/openmls", rev = "beb0884db264075aef271b96efbd7e9d102ee374" }

# Pin blstrs_plus to accept blst >=0.3.12 (upstream pins =0.3.12, alloy/c-kzg needs >=0.3.14)
blstrs_plus = { path = "/media/t42/th42/Code/blstrs-pinned" }

# Pin hpke-rs to the rev libxmtp uses (git default branch moved to 0.5)
[patch."https://github.com/cryspen/hpke-rs"]
hpke-rs = { path = "/media/t42/th42/Code/hpke-rs-pinned" }
hpke-rs-crypto = { path = "/media/t42/th42/Code/hpke-rs-pinned/traits" }
hpke-rs-libcrux = { path = "/media/t42/th42/Code/hpke-rs-pinned/libcrux_provider" }
hpke-rs-rust-crypto = { path = "/media/t42/th42/Code/hpke-rs-pinned/rust_crypto_provider" }

[build-dependencies]
cc = "1"
