[package]
name = "heaven-app"
version = "0.1.0"
edition = "2021"

[lib]
name = "heaven_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
rodio = { version = "0.17", features = ["symphonia-aac", "symphonia-isomp4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
open = "5"
urlencoding = "2"
base64 = "0.22"
which = "6"

[profile.release]
lto = true
strip = true
