[package]
name = "lit-load-roundtrip-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10"
anyhow = "1"
base64 = "0.22"
bundles_rs = { git = "https://github.com/loadnetwork/bundles-rs.git", branch = "main" }
chrono = "0.4"
dirs = "6"
dotenvy = "0.15"
ethers = { version = "2", default-features = false, features = ["rustls"] }
hex = "0.4"
lit-rust-sdk = { path = "../../../../lit-rust-sdk/lit-rust-sdk" }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }
ureq = { version = "3", features = ["json"] }
