[package]
name = "heaven_lit_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "heaven_lit_rust"
crate-type = ["cdylib", "staticlib"]

[dependencies]
aes-gcm = "0.10"
base64 = "0.22"
chrono = { version = "0.4" }
ethers = "2.0"
getrandom = "0.2"
hex = "0.4"
lit-rust-sdk = { path = "../../../../../../lit-rust-sdk/lit-rust-sdk" }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.40", features = ["rt-multi-thread", "time"] }
uuid = { version = "1", features = ["v4"] }

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
