[package]
name = "heaven_lit_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "heaven_lit_rust"
crate-type = ["cdylib", "staticlib"]

[dependencies]
chrono = { version = "0.4" }
ethers = "2.0"
lit-rust-sdk = { path = "../../../../../../lit-rust-sdk/lit-rust-sdk" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["rt-multi-thread", "time"] }

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
